Prevent form zoom on mobile

--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -88,3 +88,10 @@ h2 {
 .button:hover {
   border-color: var(--button-border-color-hover);
 }
+
+/* Avoid mobile zoom */
+input[type='text'],
+input[type='email'],
+textarea#message {
+  font-size: 16px;
+}
